--- a/finalproject/app/src/main/res/layout/activity_main.xml
+++ b/finalproject/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     tools:context=".MainActivity">
 
     <Button
+        android:id="@+id/get_game_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="GetSumGame"
@@ -17,6 +18,13 @@
         android:textSize="25sp"
         android:layout_gravity="center_horizontal"
         />
+    <TextView
+        android:id="@+id/test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:padding="16dp"
+        android:text="We cannot load info" />
 
     <FrameLayout
         android:layout_width="match_parent"
