--- a/finalproject/app/src/main/res/values/sizes.xml
+++ b/finalproject/app/src/main/res/values/sizes.xml
@@ -3,4 +3,10 @@
     <dimen name="header_text_size">32sp</dimen>
     <dimen name="subheader_text_size">24sp</dimen>
     <dimen name="default_text_size">16sp</dimen>
+
+    <dimen name="detail_text_margin">24dp</dimen>
+
+    <dimen name="preview_padding_border">20dp</dimen>
+    <dimen name="preview_max_image_width">320dp</dimen>
+    <dimen name="preview_max_image_height">180dp</dimen>
 </resources>
