--- a/finalproject/app/src/main/res/menu/main.xml
+++ b/finalproject/app/src/main/res/menu/main.xml
@@ -3,6 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/menu_refresh"
+        android:title="menuRefresh"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/action_settings"
         android:icon="@drawable/ic_settings_black_setting"
         android:title="@string/action_settings"
