--- a/finalproject/app/src/main/res/layout/activity_main.xml
+++ b/finalproject/app/src/main/res/layout/activity_main.xml
@@ -1,58 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/get_main_layout"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@drawable/wallpaper"
-    tools:context=".MainActivity">
-
-    <Button
-        android:id="@+id/get_game_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="GetSumGame"
-        android:textColor="#ffffff"
-        android:background="@drawable/custom_button1"
-        android:textStyle="bold"
-        android:textSize="25sp"
-        android:layout_gravity="center_horizontal"
-
-        />
-
-    <FrameLayout
+    android:layout_height="match_parent">
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/get_main_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="@drawable/wallpaper"
+        tools:context=".MainActivity">
 
-        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/swiperefresh"
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_game_items"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="8dp"
+            android:orientation="vertical">
+
+
+            <Button
+                android:id="@+id/get_game_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="GetSumGame"
+                android:textColor="#ffffff"
+                android:background="@drawable/custom_button1"
+                android:textStyle="bold"
+                android:textSize="25sp"
+                android:layout_gravity="center_horizontal"
+
+                />
+
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+                android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/tv_loading_error_message"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:padding="16dp"
-            android:visibility="invisible"
-            android:text="We cannot load info" />
+                <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+                    xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:id="@+id/swiperefresh"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rv_game_items"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+                </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
-        <ProgressBar
-            android:id="@+id/pb_loading_indicator"
-            android:layout_width="72dp"
-            android:layout_height="72dp"
-            android:layout_margin="32dp"
-            android:layout_gravity="top|center_horizontal"
-            android:visibility="invisible"/>
-    </FrameLayout>
+                <TextView
+                    android:id="@+id/tv_loading_error_message"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="20sp"
+                    android:padding="16dp"
+                    android:visibility="invisible"
+                    android:text="We cannot load info" />
 
-</LinearLayout>
+                <ProgressBar
+                    android:id="@+id/pb_loading_indicator"
+                    android:layout_width="72dp"
+                    android:layout_height="72dp"
+                    android:layout_margin="32dp"
+                    android:layout_gravity="top|center_horizontal"
+                    android:visibility="invisible"/>
+            </FrameLayout>
+
+        </LinearLayout>
+    </LinearLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_saved_repos"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:fitsSystemWindows="true"
+            android:padding="8dp" />
+</androidx.drawerlayout.widget.DrawerLayout>
