--- a/finalproject/app/src/main/res/layout/activity_detail.xml
+++ b/finalproject/app/src/main/res/layout/activity_detail.xml
@@ -13,6 +13,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         tools:layout_editor_absoluteX="1dp">
 
+        <!-- HEADLINES -->
         <TextView
             android:id="@+id/detail_streamer_header"
             android:layout_width="match_parent"
@@ -33,38 +34,57 @@
             android:background="@color/colorPrimaryDark"
             android:text="@string/game_name"/>
 
-        <FrameLayout
-            android:id="@+id/detail_preview_frame"
+        <!-- BODY -->
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content">
 
-            <ImageView
-                android:id="@+id/detail_preview_image"
-                android:layout_width="@dimen/preview_max_image_width"
-                android:layout_height="@dimen/preview_max_image_height"
-                android:layout_margin="@dimen/preview_padding_border"
-                android:layout_gravity="center_horizontal" />
 
-        </FrameLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingTop="@dimen/default_padding_small"
+                android:paddingBottom="@dimen/default_padding_large">
+                <FrameLayout
+                    android:id="@+id/detail_preview_frame"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" >
 
-        <TextView
-            android:id="@+id/detail_rating_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:textSize="@dimen/default_text_size"
-            android:textColor="@color/colorPrimary"
-            android:text="@string/game_rating"
-            android:layout_margin="@dimen/detail_text_margin"/>
+                    <ImageView
+                        android:id="@+id/detail_preview_image"
+                        android:layout_width="@dimen/preview_max_image_width"
+                        android:layout_height="@dimen/preview_max_image_height"
+                        android:layout_margin="@dimen/preview_padding_border"
+                        android:layout_gravity="center_horizontal" />
 
-        <TextView
-            android:id="@+id/detail_stream_span_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:textSize="@dimen/default_text_size"
-            android:textColor="@color/colorPrimary"
-            android:text="@string/stream_span" />
+                </FrameLayout>
+
+                <TextView
+                    android:id="@+id/detail_rating_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:textSize="@dimen/default_text_size"
+                    android:textColor="@color/colorPrimary"
+                    android:text="@string/game_rating"
+                    android:layout_margin="@dimen/detail_text_margin"/>
+
+                <TextView
+                    android:id="@+id/detail_stream_span_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:textSize="@dimen/default_text_size"
+                    android:textColor="@color/colorPrimary"
+                    android:text="@string/stream_span" />
+            </LinearLayout>
+
+        </ScrollView>
+
+        <!-- END BODY -->
 
     </LinearLayout>
+
+    <!-- END DOCUMENT -->
 </androidx.constraintlayout.widget.ConstraintLayout>
