--- a/finalproject/app/src/main/res/layout/activity_main.xml
+++ b/finalproject/app/src/main/res/layout/activity_main.xml
@@ -83,5 +83,6 @@
             android:layout_height="match_parent"
             android:layout_gravity="start"
             android:fitsSystemWindows="true"
+            android:background="@color/cardview_light_background"
             android:padding="8dp" />
 </androidx.drawerlayout.widget.DrawerLayout>
