--- a/finalproject/app/src/main/res/layout/activity_main.xml
+++ b/finalproject/app/src/main/res/layout/activity_main.xml
@@ -77,12 +77,25 @@
 
         </LinearLayout>
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        android:orientation="vertical"
+        android:background="@color/cardview_light_background">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="View History"
+            android:padding="8dp"
+            android:textSize="28sp"
+            android:textColor="#000"/>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_saved_repos"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="start"
-            android:fitsSystemWindows="true"
             android:background="@color/cardview_light_background"
             android:padding="8dp" />
+    </LinearLayout>
 </androidx.drawerlayout.widget.DrawerLayout>
