--- a/finalproject/app/src/main/res/values/arrays.xml
+++ b/finalproject/app/src/main/res/values/arrays.xml
@@ -6,6 +6,8 @@
         <item>@string/pref_language_french_entry</item>
         <item>@string/pref_language_japanese_entry</item>
         <item>@string/pref_language_korean_entry</item>
+        <item>@string/pref_language_Portuguese_entry</item>
+        <item>@string/pref_language_Turkish_entry</item>
     </string-array>
 
     <string-array name="pref_language_values">
@@ -14,5 +16,9 @@
         <item>@string/pref_language_french_value</item>
         <item>@string/pref_language_japanese_value</item>
         <item>@string/pref_language_korean_value</item>
+        <item>@string/pref_language_Portuguese_value</item>
+        <item>@string/pref_language_Turkish_value</item>
+
+
     </string-array>
 </resources>
