--- a/finalproject/app/src/main/res/layout/game_list_item.xml
+++ b/finalproject/app/src/main/res/layout/game_list_item.xml
@@ -108,6 +108,26 @@
                     android:textSize="15sp" />
             </LinearLayout>
 
+            <LinearLayout android:orientation="horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="8dp"
+                    android:textSize="15sp"
+                    android:text="Language: "
+                    android:textColor="#000"/>
+
+                <TextView
+                    android:id="@+id/Language_pref"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="8dp"
+                    android:textSize="15sp" />
+            </LinearLayout>
+
         </LinearLayout>
 
     </LinearLayout>
